<resources>
    <string name="app_name">checker</string>
    <string name="action_settings">Settings</string>
    <string name="categoryName">Kategorie</string>
    <string name="questionName">Frage</string>
    <string name="answerName">Antwort</string>
    <string name="buttonName">GO!</string>
    <string name="copyrightText">COPYRIGHT © \nDiese App wurde 2019 von Julian Karrer gebastelt und unter der MIT-Lizenz veröffentlicht. Den Sourcecode gibt es unter https://github.com/JulianKarrer/checker. \n\n Karibu sana! </string>
    <string name="instructionsText">VOKABELN HINZUFÜGEN \n\nUm selbst Vokabeln zu der Liste zu ergänzen, bearbeiten Sie das untere Fenster oder kopieren sie fertige checker-Listen hinein.\nPro Zeile ist eine Vokabel zu schreiben, im Format: \n %KATEGORIE \n Kiswaheli Vokabel # Deutsche Übersetzung \n\n Die Raute dient dabei als Trennsymbol. \n Nach einer Kategorieangabe mit % können beliebig viele Vokabeln dieser Kategorie folgen. Wird ein Kategorienname genutzt, der bereits vorhanden ist, so werden die nachfolgenden Vokabelzeilen dieser Kategorie zugerechnet.</string>
    <string name="searchBarHint">Suchen …</string>
    <string name="noSearchResults">Es wurden keine entsprechenden Vokabeln gefunden.</string>
    <string name="swapLanguagesSwitch">Richtung der Übersetzung tauschen</string>
    <string name="openTextEditor">Vokabeln hinzufügen</string>
    <string name="submitTextEditor">ÄNDERUNGEN SPEICHERN</string>
</resources>
